syntax = "proto3";

package mall.rpc.merchants;

option go_package = "/;pb";

service Merchants {
  // 加入商户
  rpc JoinMerchant(JoinMerchantRequest) returns(JoinMerchantResponse) {}
  // 更新商户信息
  rpc UpdateMerchant(UpdateMerchantRequest) returns(UpdateMerchantResponse) {}
  // 关闭商户
  rpc CloseMerchant(CloseMerchantRequest) returns(CloseMerchantResponse) {}
  // 查询商户
  rpc GetMerchant(GetMerchantRequest) returns(GetMerchantResponse) {}
}

message JoinMerchantRequest {
  string shop_name = 1;
  string shop_logo = 2;
  string mobile = 3;
  string address = 4;
  string remark = 5;
  int64 user_id = 6;
}

message JoinMerchantResponse {
  bool status = 1;
}

message UpdateMerchantRequest {
  string shop_name = 1;
  string shop_logo = 2;
  string mobile = 3;
  string address = 4;
  string remark = 5;
  int64 user_id = 6;
  int64 shop_id = 7;
}

message UpdateMerchantResponse {
  bool status = 1;
}

message CloseMerchantRequest {
  int64 shop_id = 1;
}

message CloseMerchantResponse {
  bool status = 1;
}

message GetMerchantRequest {
  int64 user_id = 1;
}

message GetMerchantResponse {
  int64 id = 1;
  int64 user_id = 2;
  string shop_name = 3;
  string shop_logo = 4;
  string mobile = 5;
  string address = 6;
  string remark = 7;
  int32 sort = 8;
  int32 is_hide = 9;
  int64 status = 10;
}
